@@ -1,8 +1,8 @@
 package dev.alaindustrial.compat.rei;
 
+import dev.alaindustrial.client.compat.RecipeViewerLayout;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
@@ -45,7 +45,12 @@ public class PolymerizingCategory implements DisplayCategory<PolymerizingDisplay
 
 	@Override
 	public int getDisplayHeight() {
-		return 48;
+		return RecipeViewerLayout.HEIGHT;
+	}
+
+	@Override
+	public int getDisplayWidth(PolymerizingDisplay display) {
+		return RecipeViewerLayout.WIDTH;
 	}
 
 	@Override
@@ -53,36 +58,24 @@ public class PolymerizingCategory implements DisplayCategory<PolymerizingDisplay
 		List<Widget> widgets = new ArrayList<>();
 		widgets.add(Widgets.createRecipeBase(bounds));
 
-		int centerX = bounds.getCenterX();
-		int rowY = bounds.getY() + 6;
-		Point input = new Point(centerX - 35, rowY);
-		Point arrow = new Point(centerX - 12, rowY - 1);
-		Point output = new Point(centerX + 19, rowY);
-
-		widgets.add(Widgets.createArrow(arrow));
-		if (!display.getInputEntries().isEmpty()) {
-			widgets.add(Widgets.createSlot(input).entries(display.getInputEntries().get(0)).markInput());
-		}
-		if (!display.getOutputEntries().isEmpty()) {
-			widgets.add(Widgets.createSlot(output).entries(display.getOutputEntries().get(0)).markOutput());
-		}
+		widgets.add(Widgets.createArrow(new Point(
+				bounds.getX() + RecipeViewerLayout.ARROW_X,
+				bounds.getY() + RecipeViewerLayout.ARROW_Y)));
+		Point input = new Point(bounds.getX() + RecipeViewerLayout.inputXs(1).getFirst(),
+				bounds.getY() + RecipeViewerLayout.SLOT_Y);
+		widgets.add(Widgets.createSlot(input).entries(display.getInputEntries().getFirst()).markInput());
+		Point output = new Point(bounds.getX() + RecipeViewerLayout.outputXs(1).getFirst(),
+				bounds.getY() + RecipeViewerLayout.SLOT_Y);
+		widgets.add(Widgets.createSlot(output).entries(display.getOutputEntries().getFirst()).markOutput());
 
 		// EU cost, intrinsic time and the volume one operation drinks. Units (EU / s / mB) are symbols —
 		// literal, no lang keys, as in every other machine category.
-		String cost = display.energy() + " EU · " + formatSeconds(display.processingTicks())
-				+ " · " + display.amountMb() + " mB";
-		widgets.add(Widgets.createLabel(new Point(centerX, bounds.getMaxY() - 12), Component.literal(cost))
+		String cost = RecipeViewerLayout.fluidCostLabel(
+				display.energy(), display.processingTicks(), display.amountMb());
+		widgets.add(Widgets.createLabel(new Point(bounds.getCenterX(),
+				bounds.getY() + RecipeViewerLayout.LABEL_Y), Component.literal(cost))
 				.noShadow().color(0xFF404040, 0xFFBBBBBB));
 
 		return widgets;
-	}
-
-	/** Ticks → "N.N s" (20 ticks = 1 s), trimming a trailing ".0". */
-	private static String formatSeconds(int ticks) {
-		String seconds = String.format(Locale.ROOT, "%.1f", ticks / 20.0);
-		if (seconds.endsWith(".0")) {
-			seconds = seconds.substring(0, seconds.length() - 2);
-		}
-		return seconds + " s";
 	}
 }
